--- a/test/cassettes/MinitestVcr/Spec/nested_describe/example_in_nested_describe.yml
+++ b/test/cassettes/MinitestVcr/Spec/nested_describe/example_in_nested_describe.yml
@@ -25,15 +25,15 @@ http_interactions:
       Content-Type:
       - text/html
       Date:
-      - Fri, 10 Oct 2014 06:26:07 GMT
+      - Tue, 14 Oct 2014 18:04:11 GMT
       Etag:
       - '"359670651"'
       Expires:
-      - Fri, 17 Oct 2014 06:26:07 GMT
+      - Tue, 21 Oct 2014 18:04:11 GMT
       Last-Modified:
       - Fri, 09 Aug 2013 23:54:35 GMT
       Server:
-      - ECS (rhv/818F)
+      - ECS (ftw/FBE4)
       X-Cache:
       - HIT
       X-Ec-Custom-Error:
@@ -60,5 +60,5 @@ http_interactions:
         or asking for permission.</p>\n    <p><a href=\"http://www.iana.org/domains/example\">More
         information...</a></p>\n</div>\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 10 Oct 2014 06:26:07 GMT
+  recorded_at: Tue, 14 Oct 2014 18:04:11 GMT
 recorded_with: VCR 2.9.3
