--- a/test/cassettes/MinitestVcr_Spec/nested_describe/example_in_nested_describe.yml
+++ b/test/cassettes/MinitestVcr_Spec/nested_describe/example_in_nested_describe.yml
@@ -12,7 +12,7 @@ http_interactions:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - "*/*"
+      - ! '*/*'
   response:
     status:
       code: 200
@@ -25,15 +25,15 @@ http_interactions:
       Content-Type:
       - text/html
       Date:
-      - Tue, 14 Oct 2014 18:15:53 GMT
+      - Fri, 17 Oct 2014 05:41:47 GMT
       Etag:
-      - '"359670651"'
+      - ! '"359670651"'
       Expires:
-      - Tue, 21 Oct 2014 18:15:53 GMT
+      - Fri, 24 Oct 2014 05:41:47 GMT
       Last-Modified:
       - Fri, 09 Aug 2013 23:54:35 GMT
       Server:
-      - ECS (ftw/FBE4)
+      - ECS (iad/182A)
       X-Cache:
       - HIT
       X-Ec-Custom-Error:
@@ -41,8 +41,8 @@ http_interactions:
       Content-Length:
       - '1270'
     body:
-      encoding: UTF-8
-      string: "<!doctype html>\n<html>\n<head>\n    <title>Example Domain</title>\n\n
+      encoding: US-ASCII
+      string: ! "<!doctype html>\n<html>\n<head>\n    <title>Example Domain</title>\n\n
         \   <meta charset=\"utf-8\" />\n    <meta http-equiv=\"Content-type\" content=\"text/html;
         charset=utf-8\" />\n    <meta name=\"viewport\" content=\"width=device-width,
         initial-scale=1\" />\n    <style type=\"text/css\">\n    body {\n        background-color:
@@ -60,5 +60,5 @@ http_interactions:
         or asking for permission.</p>\n    <p><a href=\"http://www.iana.org/domains/example\">More
         information...</a></p>\n</div>\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Tue, 14 Oct 2014 18:15:53 GMT
+  recorded_at: Fri, 17 Oct 2014 05:41:47 GMT
 recorded_with: VCR 2.9.3
